--- a/deb-packages/32bitonly/exelinvst/CMakeLists.txt
+++ b/deb-packages/32bitonly/exelinvst/CMakeLists.txt
@@ -1,3 +1,11 @@
+# cmake_minimum_required(VERSION 3.9)
+
+project(LinVst)
+
+INCLUDE(FindPackageHandleStandardArgs)
+
+message( "Configuring Project LinVst.")
+
 # Compile Flags.
 ################
 SET(STATIC_LINKING FALSE )
@@ -58,11 +66,22 @@ set( CMAKE_CXX_STANDARD 14 )
 
 include_directories( ${WIN_INCLUDE} )
 
-set( CMAKE_EXE_LINKER_FLAGS "-m32 -L/opt/wine-stable/lib64/wine -L/opt/wine-devel/lib64/wine -L/opt/wine-staging/lib64/wine -L/usr/lib/x86_64-linux-gnu/wine-development -lpthread -lrt $(LINK_FLAGS)" )
+#set( CMAKE_EXE_LINKER_FLAGS "-m32 -L/opt/wine-stable/lib/wine -L/opt/wine-devel/lib/wine -L/opt/wine-staging/lib/wine -lpthread -lrt $(LINK_FLAGS)" )
 
 add_executable( lin-vst-server32lx.exe  ${LINVST_SVR_SRC} )
-set_target_properties( lin-vst-server32lx.exe PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS}  -m32 -O2 -DEMBED -DEMBEDDRAG -DWAVES -DVESTIGE -DNEWTIME -DINOUTMEM -DCHUNKBUF -DXECLOSE -DEMBEDRESIZE" )
+#set_target_properties( lin-vst-server32lx.exe PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS}  -m32 -O2 -DEMBED -DEMBEDDRAG -DWAVES -DVESTIGE -DNEWTIME -DINOUTMEM -DCHUNKBUF -DXECLOSE -DEMBEDRESIZE" )
+
+set_target_properties( lin-vst-server32lx.exe PROPERTIES COMPILE_FLAGS " ${CMAKE_CXX_FLAGS} -Wl,-L/opt/wine-stable/lib/wine -L/opt/wine-devel/lib/wine -L/opt/wine-staging/lib/wine -m32 -fPIC -O2 -DEMBED -DEMBEDDRAG -DWAVES -DVESTIGE -DNEWTIME -DINOUTMEM -DCHUNKBUF -DXECLOSE -DEMBEDRESIZE")
+
+set_target_properties( lin-vst-server32lx.exe PROPERTIES LINK_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/opt/wine-stable/lib/wine -L/opt/wine-devel/lib/wine -L/opt/wine-staging/lib/wine" )
+
 target_link_libraries( lin-vst-server32lx.exe pthread rt )
 
-install( TARGETS  lin-vst-server32lx.exe DESTINATION bin )
-install(FILES  ${PROJECT_BINARY_DIR}/bin/lin-vst-server32lx.exe.so  DESTINATION bin)
+#install( TARGETS  lin-vst-server32lx.exe DESTINATION bin )
+#install(FILES  ${PROJECT_BINARY_DIR}/bin/lin-vst-server32lx.exe.so  DESTINATION bin)
+
+install( TARGETS
+  lin-vst-server32lx.exe  
+  DESTINATION bin )
+
+install(FILES  ${CMAKE_CURRENT_BINARY_DIR}/bin/lin-vst-server32lx.exe.so DESTINATION bin)
