--- a/deb-packages/32bitonly/liblinvst/CMakeLists.txt
+++ b/deb-packages/32bitonly/liblinvst/CMakeLists.txt
@@ -4,7 +4,7 @@
 SET(STATIC_LINKING FALSE )
 
 set( CMAKE_CXX_STANDARD 14 )
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32 -fPIC -O2 -DLVRT -DVST32 -DEMBED -DEMBEDDRAG -DWAVES -DVESTIGE -DNEWTIME -DINOUTMEM -DCHUNKBUF -DXECLOSE -DEMBEDRESIZE -DPCACHE -DXECLOSE")
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32 -fPIC -O2 -DLVRT -DVST32 -DEMBED -DEMBEDDRAG -DWAVES -DVESTIGE -DNEWTIME -DINOUTMEM -DCHUNKBUF -DEMBEDRESIZE -DPCACHE")
 
 # Project Path.
 ###############
