--- a/Makefile-64bitonly
+++ b/Makefile-64bitonly
@@ -1,6 +1,8 @@
 #!/usr/bin/make -f
 # Makefile for LinVst #
 
+
+
 CXX     = g++
 WINECXX = wineg++
 
@@ -19,13 +21,18 @@ BUILD_FLAGS_WIN = -m64 -O2 -DVST6432 -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -
 LINK_FLAGS   = $(LDFLAGS)
 
 LINK_PLUGIN = -shared -lpthread -ldl -lX11 -lrt $(LINK_FLAGS)
-LINK_WINE = -L/opt/wine-stable/lib64/wine -L/opt/wine-devel/lib64/wine -L/opt/wine-staging/lib64/wine -L/usr/lib/x86_64-linux-gnu/wine-development -lpthread -lX11 -lrt -lshell32  -lole32 $(LINK_FLAGS)
+LINK_WINE = -L/opt/wine-stable/lib64/wine -L/opt/wine-devel/lib64/wine -L/opt/wine-staging/lib64/wine -L/opt/wine-stable/lib64/wine/x86_64-unix -L/opt/wine-devel/lib64/wine/x86_64-unix -L/opt/wine-staging/lib64/wine/x86_64-unix -L/usr/lib/x86_64-linux-gnu/wine-development -lpthread -lX11 -lrt -lshell32  -lole32 $(LINK_FLAGS)
+
+PATH_TO_FILE = /usr/include/bits
 
 TARGETS     = linvst.so lin-vst-servertrack.exe
+
+PATH := $(PATH):/opt/wine-stable/bin:/opt/wine-devel/bin:/opt/wine-staging/bin
 
 # --------------------------------------------------------------
 
 all: $(TARGETS)
+
 
 linvst.so: linvst.unix.o remotevstclient.unix.o remotepluginclient.unix.o paths.unix.o
 	$(CXX) $^ $(LINK_PLUGIN) -o $@
@@ -58,17 +65,6 @@ remotepluginserver.wine.o: remotepluginserver.cpp
 
 paths.wine.o: paths.cpp
 	$(WINECXX) $(BUILD_FLAGS_WIN) -c $^ -o $@
-
-lin-vst-server.wine32.o: lin-vst-server.cpp
-	$(WINECXX) $(BUILD_FLAGS_WIN32) -c $^ -o $@
-
-remotepluginserver.wine32.o: remotepluginserver.cpp
-	$(WINECXX) $(BUILD_FLAGS_WIN32) -c $^ -o $@
-
-paths.wine32.o: paths.cpp
-	$(WINECXX) $(BUILD_FLAGS_WIN32) -c $^ -o $@
-
-
 
 clean:
 	rm -fR *.o *.exe *.so vst $(TARGETS)
