--- a/Makefile-64bitonly
+++ b/Makefile-64bitonly
@@ -19,7 +19,7 @@ BUILD_FLAGS_WIN = -m64 -fPIC -O2 -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -DVES
 
 LINK_FLAGS   = $(LDFLAGS)
 
-LINK_PLUGIN = -shared -lpthread -ldl -lX11 -lrt $(LINK_FLAGS)
+LINK_PLUGIN = -shared -lpthread -ldl -lX11 $(LINK_FLAGS)
 LINK_WINE = -L/opt/wine-stable/lib64/wine -L/opt/wine-devel/lib64/wine -L/opt/wine-staging/lib64/wine -L/opt/wine-stable/lib64/wine/x86_64-unix -L/opt/wine-devel/lib64/wine/x86_64-unix -L/opt/wine-staging/lib64/wine/x86_64-unix -L/usr/lib/x86_64-linux-gnu/wine-development -lpthread -lX11 -lrt -lshell32  -lole32 $(LINK_FLAGS)
 
 PATH_TO_FILE = /usr/include/bits
