--- a/deb-packages/32bitonly/liblinvst/CMakeLists.txt
+++ b/deb-packages/32bitonly/liblinvst/CMakeLists.txt
@@ -26,6 +26,6 @@ set( LINVST_SO_SRC SHARED
 
 add_library(linvst ${LINVST_SO_SRC} )
 set_target_properties(linvst PROPERTIES PREFIX "")
-target_link_libraries( linvst pthread dl X11 rt )
+target_link_libraries( linvst pthread dl X11 )
 
 install( TARGETS linvst DESTINATION share/LinVst/32bit )
